- updated USE from trunk with changes from trunk 4.0
git-svn-id: https://db-svn.informatik.uni-bremen.de/repos/stuff/use_plugins@5457 e95982d2-0d12-e879-a455-8ce5a0885042